WIP shop restore ui